--- a/templates/qbittorrentvpn.yml
+++ b/templates/qbittorrentvpn.yml
@@ -38,5 +38,5 @@
       - WEBUI_PORTS=${QBITTORRENT_WEBUI_PORT}/tcp,${QBITTORRENT_WEBUI_PORT}/udp # Optional only needed if you want to change the default 8080 WebUI port
     volumes:
       - /etc/localtime:/etc/localtime:ro
-      - ${DOCKERCONFDIR}/qbittorrent:/config:rw
+      - ${DOCKERCONFDIR}/qbittorrentvpn:/config:rw
       - ${DOCKERSTORAGEDIR}/torrents:/data/torrents:rw
